--- a/app/assets/style/component/_navbar.scss
+++ b/app/assets/style/component/_navbar.scss
@@ -13,20 +13,6 @@
         padding: 14px 16px;
         margin-right: 9px;
         margin-left: 9px;
-        position: relative;
-        &::before{
-            opacity: 0;
-            content: "";
-            position: absolute;
-            left: 0;
-            bottom: 10px;
-            right: 0;
-            height: 1px;
-            background-color: $primary-light;
-            transition: $transition-base;
-        }
-        &:hover::before{
-            opacity: 1;
-        }
+       @include hover-line;
     }
 }
