--- a/app/checkout.ejs
+++ b/app/checkout.ejs
@@ -53,95 +53,7 @@
     
 
     <%- contents %>
-    <div class="container my-6 my-md-15">
-      <h2 class="mb-6 fs-2">猜你也喜歡...</h2>
-      <div class="row overflow-hidden">
-        <div class="offset-md-1">
-           <div class="swiper-container mySwiper">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <a href="#" class="text-dark">
-                    <img class="like-img mb-1 img-cover" src="assets/images/stream-1.jpg" alt="stream-image">
-                    <h3 class="fs-5 mb-1">No.22 線上設計展</h3>
-                    <p class="fs-5">$350</p>
-                  </a>
-                </div>
-                <div class="swiper-slide ">
-                  <a href="#" class="text-dark">
-                    <img class="like-img mb-1 img-cover" src="assets/images/stream-2.jpg" alt="stream-image">
-                    <h3 class="fs-5 mb-1">No.22 線上設計展</h3>
-                    <p class="fs-5">$350</p>
-                  </a>
-                </div>
-                <div class="swiper-slide ">
-                  <a href="#" class="text-dark">
-                    <img class="like-img mb-1 img-cover" src="assets/images/stream-3.jpg" alt="stream-image">
-                    <h3 class="fs-5 mb-1">No.22 線上設計展</h3>
-                    <p class="fs-5">$350</p>
-                  </a>
-                </div>
-                <div class="swiper-slide">
-                  <a href="#" class="text-dark">
-                    <img class="like-img mb-1 img-cover" src="assets/images/footer.jpg" alt="stream-image">
-                    <h3 class="fs-5 mb-1">No.22 線上設計展</h3>
-                    <p class="fs-5">$350</p>
-                  </a>
-                </div>
-                <div class="swiper-slide">
-                  <a href="#" class="text-dark">
-                    <img class="like-img mb-1 img-cover" src="assets/images/exibition-image1.jpg" alt="stream-image">
-                    <h3 class="fs-5 mb-1">No.22 線上設計展</h3>
-                    <p class="fs-5">$350</p>
-                  </a>
-                </div>
-              </div>
-            </div> 
-        </div>
-      </div>
-    </div>
-    <div class="bg-dark">
-        <div class="container subscribe bg-cover
-                    d-flex flex-column justify-content-end">
-            <h2 class="text-light mb-3">想收到展覽的最新消息嗎？<br> 快訂閱我們！</h2>
-            <div class="row mb-9">
-              <div class="col-md-6 col-lg-4">
-                <div class="input-group">
-                  <input type="text" 
-                         class="form-control" 
-                         placeholder="輸入您的電子信箱" 
-                         aria-label="輸入您的電子信箱"
-                         aria-describedby="button-addon2">
-                  <button class="btn btn-primary-light" 
-                          type="button" 
-                          id="button-addon2">訂閱
-                  </button>
-                </div>
-              </div>
-            </div>
-        </div>
-        
-    </div>
-    <footer class="footer py-7">
-      <div class="container">
-          <div class="d-flex justify-content-between align-items-center">
-              <div class="d-flex flex-column flex-md-row align-items-md-center">
-                <a class="fs-4 text-dark me-4"
-                   href="#">EXHIBINECTION
-                </a>
-                <p>© 2020. All Rights Reserved.</p>
-              </div>
-              <ul class="d-none
-                         d-md-flex align-items-center list-unstyled">
-                <li>
-                  <a href="#">Sign in</a>
-                </li>
-                <li class="ms-6">
-                  <a href="#">Sign up</a>
-                </li>
-              </ul>
-          </div>
-      </div>
-    </footer>
+
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./assets/js/vendors.js"></script>
     <script src="./assets/js/all.js"></script>
@@ -306,7 +218,8 @@
               <p class="me-6">小計</p>
               <p>NT$1050</p>
             </div>
-            <a href="checkout1.html" class="btn btn-sm btn-light text-primary">前往結帳</a>
+            <a href="checkout1.html"
+               class="btn btn-sm btn-light text-primary">前往結帳</a>
         </div>
     </div>
   </div>
