--- a/app/assets/style/helpers/_helper.scss
+++ b/app/assets/style/helpers/_helper.scss
@@ -12,6 +12,9 @@
     overflow: hidden;
 }
 
+.mh-100vh{
+   height: calc(100vh - 80px);
+}
 .write-vertical{
     -webkit-writing-mode: vertical-lr;
     writing-mode: vertical-lr  
